:bug: empty-form was displayed on mobile

--- a/semantic_admin/static/semantic_admin/unsemantic.css
+++ b/semantic_admin/static/semantic_admin/unsemantic.css
@@ -36,9 +36,14 @@ button.c-sf-button:hover {
   background-color: #808080 !important;
 }
 
-.hidden,
-.empty-form {
-  display: none;
+.hidden, .empty-form {
+  display: none !important;
+}
+
+@media only screen and (max-width: 767.98px) {
+  .ui.table:not(.unstackable) > tbody> tr.empty-form {
+    display: none !important;
+  }
 }
 
 .no-horizontal-padding {
